# dial

./: CMakeLists.txt
example/: CMakeLists.txt
example/source/text_reader/: text_reader.cpp  text_reader.hpp
example/source/text_writer/: text_writer.cpp  text_writer.hpp
include/dial/: app.hpp  drawable.hpp  entry_point.hpp  file_dialog_handler.hpp  file_save_handler.hpp  form_base.hpp  singleton.hpp
source/: app.cpp  entry_point.cpp  file_dialog_handler.cpp  file_save_handler.cpp  form_base.cpp  main.cpp
source/forms_registry/: forms_registry.cpp  forms_registry.hpp
